--- a/style.css
+++ b/style.css
@@ -16,10 +16,19 @@ section {
 
 .first-page {
     width: 50%;
-    padding: 5%;
+    padding: 2%;
 }
 
 
 .first-page img {
     width: 80%;
+}
+
+.anchor-button {
+    text-decoration: none;
+    background-image: linear-gradient(45deg, lightsalmon, tomato);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: black;
+    font-weight: 700;
 }
